--- a/day2.html
+++ b/day2.html
@@ -18,7 +18,10 @@
     <table>
         <tr>
             <h2>
-                <th>სათაური</th>
+                <th>რას</th>
+            </h2>
+            <h2>
+                <th>რაში</th>
             </h2>
             <h2>
                 <th>ფეიბუქი</th>
@@ -26,12 +29,7 @@
             <h2>
                 <th>ნომერი</th>
             </h2>
-            <h2>
-                <th>ფასი</th>
-            </h2>
-            <h2>
-                <th>-</th>
-            </h2>
+           
         </tr>
         <tr>
             <th>ა</th>
