--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <h3 style="background-color: yellow; padding: 15px;"><a href="day1.html">ყიდვა</a></h3>
     <h3 style="margin-left: -1900px; margin-top: -74px; padding: 15px;"><a href="day2.html">გაცვლა</a></h3>
+    <h3 style="margin-left: -5100px; margin-top: -72px; padding: 15px; color: black;"><a href="day3.html">მომხმარებლები</a></h3>
 
     <img style="width: 50px; height: 50px; border-radius: 50px; margin-top: -71px; margin-left: 2px;"
         src="https://www.amnesty.org.uk/files/styles/large_sponsored_image/s3/2020-12/justice_4.png?VersionId=XdsrvaYNcmgYgSNFmVmab9fS1u1W3Ovw&itok=YYsLLthl">
@@ -30,6 +31,8 @@
         <br>
         <br>
 <hr>
+<br>
+<a  style="margin-left: -100px;" href="https://www.facebook.com/dimitri.mujirishvili.16"> ჩემი ფეისბუქ გვერდის ლინკისთვის დააკლიკე</a>
 </body>
 
 </html>
