--- a/sacdeli.html
+++ b/sacdeli.html
@@ -1,4 +1,4 @@
-<html>
+<!--<html>
     <body>
       <input  id="dito" name="dito"/>
       <button onclick="getandsetval()">ძებნა</button>
@@ -10,5 +10,17 @@
               document.getElementById('dito2').innerHTML = dito1;
           }
       </script>
+    </body>
+</html>-->
+<html>
+
+    <body>
+   
+        <input  id="dito" name="dito"/>
+      <button onclick="alert('75% LOVE')">ძებნა</button>
+      <p> <h5>
+          ვინაა შემდეგი წყვილი? სახელები დაწერეთ კომენტარებში
+      </h5>
+        </p>
     </body>
 </html>
