--- a/day1.html
+++ b/day1.html
@@ -2,51 +2,76 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="text1.css">
-    <link rel="icon" type="image/x-icon" href="anime1.jpg">
-    <title>
-        ანიმე სურათები.ge
-    </title>
+  <link rel="stylesheet" href="text1.css">
+  <link rel="icon" type="image/x-icon" href="anime1.jpg">
+  <title>
+    ანიმე სურათები.ge
+  </title>
 
 </head>
 
-<body style="background-color: rgb(252, 208, 215);">
-           
-    <h3 style="background-color: yellow; padding: 15px; text-align: right; width: 1865px;">
-        <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px;" href="index.html">უკან</a>
-        <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px; " href="day2.html">ტუტორიალი</a>
-        <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px; " href="dima.html">ანიმე ედითორები</a>
-        <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px;"  href="dima1.html">ვიდეოები</a>
-        <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px;" href="day1.html">სურათები</a>
-        </h3>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+<body style="background-color: #0e1538">
 
-<mark style="color: blue;"><h2>ანიმეები დროდადრო დაემატება</h2></mark>
+  <h3 style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; ">
+    <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px; border: solid black; margin-left: 7px;"
+      href="index.html">უკან</a>
+    <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+      href="day2.html">ტუტორიალი</a>
+    <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+      href="dima.html">ანიმე ედითორები</a>
+    <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+      href="dima1.html">ვიდეოები</a>
+    <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+      href="day1.html">სურათები</a>
+  </h3>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
-    <br>
-    <br>
-    <br>
- 
+  <mark style="color: rgb(238, 255, 0);">
+    <h2>ანიმეები დროდადრო დაემატება</h2>
+  </mark>
 
-    </div>
+  <br>
+  <br>
+  <br>
+
+
+  </div>
   <div>
-      <img style="margin-left: 80px; height: 200px; width: 200px;" src="https://i.pinimg.com/564x/ff/7b/f1/ff7bf1bcad7a6fe0ee23adab27b433dc.jpg">
-      <img style="margin-left: 70px; height: 200px; width: 200px;" src="https://avatarfiles.alphacoders.com/481/48100.png">
-      <img style="margin-left: 69px; height: 200px; width: 200px;" src="https://ufro.ge/uploads/posts/2021-04/1617280563_bachia-gogona.jpg">
-      <img style="margin-left: 68px; height: 200px; width: 200px;" src="https://m.media-amazon.com/images/I/51bKQgXCtLL._SL500_.jpg">
-      <img style="margin-left: 69px; height: 200px; width: 200px;" src="https://images.squarespace-cdn.com/content/v1/5aad96d33917eec4192c41fd/1539352687524-LYTCH127BN65I19YP22P/Psychology+of+Goku-4.png">
-      <img style="margin-left: 69px; height: 200px; width: 200px;" src="დიტო.png">
-      </div>
-      <button><h3><a href="day3.html">ჩემი საგმირო აკადემია</a></h3></button>
-      <button><h3><a href="day6.html">ნარუტო</a></h3></button>
-      <button><h3><a href="day7.html">არამზადა რომელსაც...</a></h3></button>
-      <button><h3><a href="day8.html">დემონების მკვეთი...</a></h3></button>
-      <button><h3><a href="">გოკუ დრაკონის ბურთი</a></h3></button>
-      <button><h3><a href="">ტალღა</a></h3></button>
-    </script>
+    <img style="margin-left: 80px; height: 200px; width: 200px; "
+      src="https://i.pinimg.com/564x/ff/7b/f1/ff7bf1bcad7a6fe0ee23adab27b433dc.jpg">
+    <img style="margin-left: 70px; height: 200px; width: 200px;"
+      src="https://avatarfiles.alphacoders.com/481/48100.png">
+    <img style="margin-left: 69px; height: 200px; width: 200px;"
+      src="https://ufro.ge/uploads/posts/2021-04/1617280563_bachia-gogona.jpg">
+    <img style="margin-left: 68px; height: 200px; width: 200px;"
+      src="https://m.media-amazon.com/images/I/51bKQgXCtLL._SL500_.jpg">
+    <img style="margin-left: 69px; height: 200px; width: 200px;"
+      src="https://images.squarespace-cdn.com/content/v1/5aad96d33917eec4192c41fd/1539352687524-LYTCH127BN65I19YP22P/Psychology+of+Goku-4.png">
+    <img style="margin-left: 69px; height: 200px; width: 200px;" src="დიტო.png">
+  </div>
+  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+    <h3><a style="color: yellow;" href="day3.html">ჩემი საგმირო აკადემია</a></h3>
+  </button>
+  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+    <h3><a style="color: yellow;" href="day6.html">ნარუტო</a></h3>
+  </button>
+  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+    <h3><a style="color: yellow;" href="day7.html">არამზადა რომელსაც...</a></h3>
+  </button>
+  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+    <h3><a style="color: yellow;" href="day8.html">დემონების მკვეთი...</a></h3>
+  </button>
+  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+    <h3><a style="color: yellow;" href="">გოკუ დრაკონის ბურთი</a></h3>
+  </button>
+  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+    <h3><a style="color: yellow;" href="">ტალღა</a></h3>
+  </button>
+  </script>
 </body>
+
 </html>
