--- a/day8.html
+++ b/day8.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body style="background-color: rgb(252, 208, 215);">
+<body style="background-color: #0e1538">
    
     <img style="height: 100px; width: 100px; border-radius: 50px;" src="https://images6.fanpop.com/image/photos/43300000/cute-anime-girls-purrsugakits-43388514-400-400.jpg">
         
