--- a/dima.html
+++ b/dima.html
@@ -5,40 +5,51 @@
             ანიმე სურათები.Ge
         </title>        
     </head>
-    <body>
-        <table style="width: 1907px;">
+    <body style="background-color: #0e1528;">
+      <h3 style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; ">
+        <a style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; border: solid black; margin-left: 7px;" href="index.html">უკან</a>
+            <a style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+              href="day2.html">ტუტორიალი</a>
+            <a style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+              href="dima.html">ანიმე ედითორები</a>
+            <a style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+              href="dima1.html">ვიდეოები</a>
+            <a style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+              href="day1.html">სურათები</a>
+          </h3>
+        <table style="width: 1907px; color: rgb(0, 0, 0); border: solid white; background-color: white;">
             <tr>
                 <th>სახელი</th>
                 <th>გვარი</th> 
                 <th>ვიდეო</th>
               </tr>
-              <tr style="height: 35px; text-align: center;">
-                <td></td>
-                <td></td>
-                <td><a href="index.html"></a></td>
-              </tr>
-              <tr style="height: 35px;">
-                <td></td>
+              <tr style="height: 35px; width: 1907px; color: white; border: solid white;">
+                <td style="color: black;">1</td>
                 <td></td>
                 <td><a href="index.html"></a></td>
               </tr>
-              <tr style="height: 35px;">
-                <td></td>
-                <td></td>
-                <td><a href="index.html"></a></td>
-              </tr>
-              <tr style="height: 35px;">
-                <td></td>
+              <tr style="height: 35px; color: white; border: solid white;">
+                <td style="color: black;">2</td>
                 <td></td>
                 <td><a href="index.html"></a></td>
               </tr>
-              <tr style="height: 35px;">
-                <td></td>
+              <tr style="height: 35px; color: white; border: solid white;">
+                <td style="color: black;">3</td>
                 <td></td>
                 <td><a href="index.html"></a></td>
               </tr>
-              <tr style="height: 35px;">
+              <tr style="height: 35px; color: white; border: solid white;">
+                <td style="color: black;">4</td>
                 <td></td>
+                <td><a href="index.html"></a></td>
+              </tr>
+              <tr style="height: 35px; color: white; border: solid white;">
+                <td style="color: black;">5</td>
+                <td></td>
+                <td><a href="index.html"></a></td>
+              </tr>
+              <tr style="height: 35px; color: white; border: solid white;">
+                <td style="color: black;">6</td>
                 <td></td>
                 <td><a href="index.html"></a></td>
               </tr>
