--- a/index.html
+++ b/index.html
@@ -9,35 +9,50 @@
 
 </head>
 
-<body style="width: 2000px;height: 200px;background-color: blanchedalmond;">
-  <h3 style="background-color: yellow; padding: 15px; text-align: right; width: 1865px;">
-    <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px; " href="day2.html">ტუტორიალი</a>
-    <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px; " href="dima.html">ანიმე ედითორები</a>
-    <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px;"  href="dima1.html">ვიდეოები</a>
-    <a style="background-color: yellow; padding: 15px; text-align: right; width: 1865px;" href="day1.html">სურათები</a>
-    </h3>
-  <img src="https://i.pinimg.com/originals/e0/1b/20/e01b203b26db44b5e8f52c16b52d8f0b.jpg"
-    style="width: 1890px; height: 870px; margin-bottom: -70px; margin-right: -50px;">
-  <div style="background-color: orange;" class="div"></div>
+<body style="width: 2000px;height: 200px;background-color: #0e1538;">
+  <h3 style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; ">
+    <select  style="width: 165px; height: 58px; border: solid black; background-color: lightblue; color: black;" name="forma" onchange="location = this.value;">
+      <option value="day5.html"><h3>საიტის შესახებ</h3></option>
+      <option value="day4.html"><h3>ანიმეს ისტორია</h3></option>
+      <option value="day2.html"><h3>ტუტორიალი</h3></option>
+     </select>
+ 
+    <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+      href="dima.html">ანიმე ედითორები</a>
+    <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+      href="dima1.html">ვიდეოები</a>
+    <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+      href="day1.html">სურათები</a>
+  
+  </h3>
+  <div class="card">
+    <img style="width: 700px; height: 450px;" src="https://images.wallpapersden.com/image/download/elaina-anime_a21oZm2UmZqaraWkpJRmaWVlrWZlamU.jpg" alt="Card Back">
+    <img style="width: 700px; height: 450px;" src="https://images.hdqwalls.com/download/anime-girl-bluehair-4k-7c-1400x1050.jpg" class="img-top" alt="Card Front">
 
-
-
-
-  <input placeholder="ღილაკი ჯერ არ არის დამატებული" class="center" style="margin-left: 650px; border-radius: 50px; width: 500px;
-         height: 30px; margin-top: 150px;" />
-  <button style="width: 100px; height: 35px; border-radius: 50px;"
-    onclick="alert('ღილაკი ჯერ არ არის დამატებული!')">ძებნა</button>
-  <div class="div1">
-    <button style="background-color: black;" class="h21"><a href="day5.html" style="color: white;">საიტის
-        შესახებ</a></button>
-    <button style="background-color: black;" class="h2"><a href="day4.html" style="color: white;">ანიმეს
-        ისტორია</a></button>
+  <div class="card" style="margin-left: 1000px; margin-top: -450px;">
+    <img style="width: 700px; height: 450px;" src="https://images.hdqwalls.com/download/anime-warrior-girl-with-sword-5k-qk-1400x1050.jpg" alt="Card Back">
+    <img style="width: 700px; height: 450px;" src="https://images.hdqwalls.com/download/anime-school-girl-getting-ready-for-school-4k-tb-1400x1050.jpg" class="img-top" alt="Card Front">
   </div>
+    <style>
+            .card {
+        width: 50px;
+        height: 50px;
+        position: relative;
+        display: inline-block;
+        margin: 50px;
+    }
+    .card .img-top {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 99;
+    }
+    .card:hover .img-top {
+        display: inline;
+    }
+    </style>s
 
-
-
-
-
-</body>
+  </body>
 
 </html>
