--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   </h3>
   <div class="card">
-    <img style="width: 700px; height: 450px;" src="https://images.wallpapersden.com/image/download/elaina-anime_a21oZm2UmZqaraWkpJRmaWVlrWZlamU.jpg" alt="Card Back">
+    <img style="width: 700px; height: 450px;" src="გ.jpg" alt="Card Back">
     <img style="width: 700px; height: 450px;" src="https://images.hdqwalls.com/download/anime-girl-bluehair-4k-7c-1400x1050.jpg" class="img-top" alt="Card Front">
 
   <div class="card" style="margin-left: 1000px; margin-top: -450px;">
