--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>
     ანიმე სურათები.Ge
   </title>
-
+  <link style="border-radius: 50px;" rel="icon" href="https://i.pinimg.com/736x/52/fe/87/52fe873be054e7f8345c65281b02c63b.jpg">
 </head>
 
 <body style="width: 2000px;height: 200px;background-color: #0e1538;">
