--- a/day1.html
+++ b/day1.html
@@ -47,21 +47,27 @@
       src="https://avatarfiles.alphacoders.com/481/48100.png">
     <img style="margin-left: 69px; height: 200px; width: 200px;"
       src="https://ufro.ge/uploads/posts/2021-04/1617280563_bachia-gogona.jpg">
-    <img style="margin-left: 68px; height: 200px; width: 200px;"
+      
+      <br>
+      <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+        <h3><a style="color: yellow;" href="day3.html">ჩემი საგმირო აკადემია</a></h3>
+      </button>
+      <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+        <h3><a style="color: yellow;" href="day6.html">ნარუტო</a></h3>
+      </button>
+      <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
+        <h3><a style="color: yellow;" href="day7.html">არამზადა რომელსაც...</a></h3>
+      </button>
+     
+    </div>
+<div>
+      <img style="margin-left: 68px; height: 200px; width: 200px;"
       src="https://m.media-amazon.com/images/I/51bKQgXCtLL._SL500_.jpg">
     <img style="margin-left: 69px; height: 200px; width: 200px;"
       src="https://images.squarespace-cdn.com/content/v1/5aad96d33917eec4192c41fd/1539352687524-LYTCH127BN65I19YP22P/Psychology+of+Goku-4.png">
     <img style="margin-left: 69px; height: 200px; width: 200px;" src="დიტო.png">
-  </div>
-  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
-    <h3><a style="color: yellow;" href="day3.html">ჩემი საგმირო აკადემია</a></h3>
-  </button>
-  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
-    <h3><a style="color: yellow;" href="day6.html">ნარუტო</a></h3>
-  </button>
-  <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
-    <h3><a style="color: yellow;" href="day7.html">არამზადა რომელსაც...</a></h3>
-  </button>
+
+  <br>
   <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
     <h3><a style="color: yellow;" href="day8.html">დემონების მკვეთი...</a></h3>
   </button>
@@ -71,7 +77,7 @@
   <button style="letter-spacing: 1px; height: 65px; width: 200px; border: solid white; background-color: #1b265c;">
     <h3><a style="color: yellow;" href="">ტალღა</a></h3>
   </button>
-  </script>
+  </div>
 </body>
 
 </html>
