--- a/day7.html
+++ b/day7.html
@@ -12,17 +12,21 @@
 </head>
 
 <body style="background-color: #0e1538;">
-   
-    <img style="height: 100px; width: 100px; border-radius: 50px;" src="https://images6.fanpop.com/image/photos/43300000/cute-anime-girls-purrsugakits-43388514-400-400.jpg">
+    <h3 style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; ">
+        <select  style="width: 165px; height: 58px; border: solid black; background-color: lightblue; color: black;" name="forma" onchange="location = this.value;">
+          <option value="day5.html"><h3>საიტის შესახებ</h3></option>
+          <option value="day4.html"><h3>ანიმეს ისტორია</h3></option>
+          <option value="day2.html"><h3>ტუტორიალი</h3></option>
+         </select>
+         <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+         href="day1.html">უკან</a>
+        <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+          href="dima.html">ანიმე ედითორები</a>
+        <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+          href="dima1.html">ვიდეოები</a>
+      
+      </h3>
         
-    <select name="forma" onchange="location = this.value;"   class="div2" style="margin-left: 1600px ;border-radius:20px ;width: 200px;border: 2px solid black; height: 50px; background-color: aqua; margin-top: -1000px;">
-        <option value="text.html">არჩევა</option>
-        <option value="index.html">საწყისი</option>
-        <option value="day1.html">უკან</option>
-        <option value="day2.html">ტუტორიალი</option>
-       </select>
-<mark style="color: blue;"><h2>ანიმეები დროდადრო დაემატება</h2></mark>
-
     <br>
     <br>
     <br>
