--- a/dima1.html
+++ b/dima1.html
@@ -1,10 +1,22 @@
 <html>
 
 <head>
-
+ <link rel="stylesheet" href="text1.css">
 </head>
 
 <body style="background-color: #0e1538;">
+    <h3 class="button" style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; ">
+        <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px; border: solid black; margin-left: 7px;"
+          href="index.html">უკან</a>
+        <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+          href="day2.html">ტუტორიალი</a>
+        <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
+          href="dima.html">ანიმე ედითორები</a>
+        <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+          href="dima1.html">ვიდეოები</a>
+        <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
+          href="day1.html">სურათები</a>
+      </h3>
     <video width="400" style="margin-top: 50px;" controls>
         <source src="1.mp4" type="video/mp4">
         <source src="mov_bbb.ogg" type="video/ogg">
