--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
 
 <body style="width: 2000px;height: 200px;background-color: #0e1538;">
   <h3 style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; ">
-    <select  style="width: 165px; height: 58px; border: solid black; background-color: lightblue; color: black;" name="forma" onchange="location = this.value;">
+    <select id="select" name="forma" onchange="location = this.value;">
       <option value="day5.html"><h3>საიტის შესახებ</h3></option>
       <option value="day4.html"><h3>ანიმეს ისტორია</h3></option>
       <option value="day2.html"><h3>ტუტორიალი</h3></option>
      </select>
  
-    <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
-      href="dima.html">ანიმე ედითორები</a>
-    <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
-      href="dima1.html">ვიდეოები</a>
-    <a style="background-color: rgb(255, 255, 255); padding: 15px;background-color: lightblue; color: black; text-align: right; width: 1865px;border: solid black; margin-left: 7px;"
-      href="day1.html">სურათები</a>
+    <button id="button"><h3><a style="margin-top: -3px;" href="dima.html">ედითორები</a></h3></button>
+    <button id="button"><h3><a href="dima1.html">ვიდეოები</a></h3></button>
+    <button id="button"><h3><a href="day1.html">სურათები</a></h3></button>
   
   </h3>
   <div class="card">
