--- a/საცდელი.html
+++ b/საცდელი.html
@@ -1,25 +1,193 @@
-<i data-visualcompletion="css-img" class="hu5pjgll lzf7d6o1" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yw/r/l1r65JWy5K_.png&quot;); background-position: 0px -190px; background-size: auto; width: 24px; height: 24px; background-repeat: no-repeat; display: inline-block;"></i>    
+<!--<html lang="en" dir="ltr">
+  <head>
+      <style>
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+html,body{
+  display: grid;
+  height: 100vh;
+  place-items: center;
+  background: #000;
+}
+.btn a{
+  position: relative;
+  color: #f5f5f5;
+  height: 70px;
+  width: 180px;
+  display: block;
+  text-align: center;
+  border-radius: 15px;
+  text-decoration: none;
+  background-image: linear-gradient(115deg,#4fcf70,#fad648,#a767e5,#12bcfe,#44ce7b);
+}
+.btn a:hover{
+  animation: rotate 0.4s linear infinite;
+}
 
-<div class="card">
-    <img src="https://images.wallpapersden.com/image/download/elaina-anime_a21oZm2UmZqaraWkpJRmaWVlrWZlamU.jpg" alt="Card Back">
-    <img src="https://images.hdqwalls.com/download/anime-girl-bluehair-4k-7c-1400x1050.jpg" class="img-top" alt="Card Front">
+.btn a span{
+    content: '\00bb';
+  height: 88%;
+  width: 96%;
+  background: #111;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 6px;
+  line-height: 62px;
+  font-size: 25px;
+  transform: translate(-50%, -50%);
+}
+      </style>
+    <meta charset="utf-8">
+    <title>Button Border Animation | CodingNepal</title>
+  </head>
+  <body>
+    <div class="btn">
+      <a href="day1.html"><span>სურათები</span></a>
+    </div>
+</body>
+</html>-->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="text.css">
+    <title>
+        ანიმე სურათები.Ge
+    </title>
+    <link style="border-radius: 50px;" rel="icon"
+        href="https://i.pinimg.com/736x/52/fe/87/52fe873be054e7f8345c65281b02c63b.jpg">
     <style>
-            .card {
-        width: 130px;
-        height: 195px;
-        position: relative;
-        display: inline-block;
-        margin: 50px;
-    }
-    .card .img-top {
-        display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 99;
-    }
-    .card:hover .img-top {
-        display: inline;
-    }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        html,
+        body {
+            display: grid;
+            height: 100vh;
+            place-items: center;
+            background: #000;
+        }
+
+        .btn a {
+            position: relative;
+            color: #f5f5f5;
+            height: 70px;
+            width: 180px;
+            display: block;
+            text-align: center;
+            border-radius: 15px;
+            text-decoration: none;
+            background-image: linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b);
+        }
+
+        .btn a:hover {
+            animation: rotate 0.4s linear infinite;
+        }
+
+        .btn a span {
+            content: '\00bb';
+            height: 88%;
+            width: 96%;
+            background: #111;
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            border-radius: 6px;
+            line-height: 62px;
+            font-size: 25px;
+            transform: translate(-50%, -50%);
+        }
+
+        #select {
+            border-radius: 20px;
+            border: 4px solid black;
+            background-color: #ffa100;
+            width: 190px;
+            height: 80px;
+            transition-duration: 0.25s;
+            padding: auto;
+
+        }
+
+        #select:hover {
+            border-radius: 20px;
+            border: 4px solid black;
+            background-color: rgb(238, 255, 0);
+            width: 200px;
+            height: 80px;
+        }
     </style>
- 
+</head>
+
+<body>
+
+    <div class="btn" style="margin-left: 850px; margin-top: -150px; ">
+        <h4>
+            <a id="select" href="day1.html"><span>სურათები</span></a>
+
+        </h4>
+    </div>
+    <div class="btn" style="margin-left: 1250px; margin-top: -630px;">
+        <h4>
+            <a id="select" href="dima1.html"><span>ვიდეოები</span></a>
+        </h4>
+    </div>
+    <div class="btn" style="margin-left: 1650px; margin-top: -1120px;">
+        <h4>
+            <a id="select" href="dima.html"><span>ედითორები</span></a>
+
+        </h4>
+    </div>
+
+    <div class="card" style="margin-left: -1600px; margin-top: -800px;">
+        <img style="width: 700px; height: 450px;"
+            src="https://images.hdqwalls.com/download/anime-girl-bluehair-4k-7c-1400x1050.jpg" alt="Card Back">
+        <img style="width: 700px; height: 450px;"
+            src="https://images.hdqwalls.com/download/anime-girl-bluehair-4k-7c-1400x1050.jpg" class="img-top"
+            alt="Card Front">
+
+        <div class="card" style="margin-left: 1000px; margin-top: -450px;">
+            <img style="width: 700px; height: 450px;"
+                src="https://images.hdqwalls.com/download/anime-warrior-girl-with-sword-5k-qk-1400x1050.jpg"
+                alt="Card Back">
+            <img style="width: 700px; height: 450px;"
+                src="https://images.hdqwalls.com/download/anime-school-girl-getting-ready-for-school-4k-tb-1400x1050.jpg"
+                class="img-top" alt="Card Front">
+        </div>
+        <style>
+            .card {
+                width: 50px;
+                height: 50px;
+                position: relative;
+                display: inline-block;
+                margin: 50px;
+            }
+
+            .card .img-top {
+                display: none;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 99;
+            }
+
+            .card:hover .img-top {
+                display: inline;
+            }
+        </style>
+
+</body>
+
+</html>
