--- a/index.html
+++ b/index.html
@@ -1,55 +1,179 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-  <link rel="stylesheet" href="text.css">
-  <title>
-    ანიმე სურათები.Ge
-  </title>
-  <link style="border-radius: 50px;" rel="icon" href="https://i.pinimg.com/736x/52/fe/87/52fe873be054e7f8345c65281b02c63b.jpg">
+    <link rel="stylesheet" href="index.js">
+    <link rel="stylesheet" href="index.css">
+    <title>
+        ანიმე სურათები </title>
+    <link style="border-radius: 50px;" rel="icon"
+        href="https://i.pinimg.com/736x/52/fe/87/52fe873be054e7f8345c65281b02c63b.jpg">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        html,
+        body {
+            display: grid;
+            height: 100vh;
+            place-items: center;
+            background: #000;
+        }
+
+        .btn a {
+            position: relative;
+            color: #f5f5f5;
+            height: 70px;
+            width: 180px;
+            display: block;
+            text-align: center;
+            border-radius: 15px;
+            text-decoration: none;
+            background-image: linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b);
+        }
+
+        .btn a:hover {
+            animation: rotate 0.4s linear infinite;
+        }
+
+        .btn a span {
+            content: '\00bb';
+            height: 88%;
+            width: 96%;
+            background: #111;
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            border-radius: 6px;
+            line-height: 62px;
+            font-size: 25px;
+            transform: translate(-50%, -50%);
+        }
+
+        #select {
+            border-radius: 20px;
+            border: 4px solid black;
+            background-color: #ffa100;
+            width: 190px;
+            height: 80px;
+            transition-duration: 0.25s;
+            padding: auto;
+
+        }
+
+        #select:hover {
+            border-radius: 20px;
+            border: 4px solid black;
+            background-color: rgb(238, 255, 0);
+            width: 200px;
+            height: 80px;
+        }
+    </style>
 </head>
 
-<body style="width: 2000px;height: 200px;background-color: #0e1538;">
-  <h3 style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; ">
-    <select id="select" name="forma" onchange="location = this.value;">
-      <option value="day5.html"><h3>საიტის შესახებ</h3></option>
-      <option value="day4.html"><h3>ანიმეს ისტორია</h3></option>
-      <option value="day2.html"><h3>ტუტორიალი</h3></option>
-     </select>
- 
-    <button id="button"><h3><a style="margin-top: -3px;" href="dima.html">ედითორები</a></h3></button>
-    <button id="button"><h3><a href="dima1.html">ვიდეოები</a></h3></button>
-    <button id="button"><h3><a href="day1.html">სურათები</a></h3></button>
-  
-  </h3>
-  <div class="card">
+
+<div class="btn" style="margin-left: 850px; margin-top: -150px; ">
+    <h4>
+        <a id="select" href="day1.html"><span>სურათები</span></a>
+
+    </h4>
+</div>
+<div class="btn" style="margin-left: 1250px; margin-top: -630px;">
+    <h4>
+        <a id="select" href="dima1.html"><span>ვიდეოები</span></a>
+    </h4>
+</div>
+<div class="btn" style="margin-left: 1650px; margin-top: -1120px;">
+    <h4>
+        <a id="select" href="dima.html"><span>ედითორები</span></a>
+
+    </h4>
+</div>
+<div class="card" style="margin-left: -1700px;margin-top: -900px;">
     <img style="width: 700px; height: 450px;" src="გ.jpg" alt="Card Back">
-    <img style="width: 700px; height: 450px;" src="https://images.hdqwalls.com/download/anime-girl-bluehair-4k-7c-1400x1050.jpg" class="img-top" alt="Card Front">
+    <img style="width: 700px; height: 450px;"
+        src="https://images.hdqwalls.com/download/anime-girl-bluehair-4k-7c-1400x1050.jpg" class="img-top"
+        alt="Card Front">
 
-  <div class="card" style="margin-left: 1000px; margin-top: -450px;">
-    <img style="width: 700px; height: 450px;" src="https://images.hdqwalls.com/download/anime-warrior-girl-with-sword-5k-qk-1400x1050.jpg" alt="Card Back">
-    <img style="width: 700px; height: 450px;" src="https://images.hdqwalls.com/download/anime-school-girl-getting-ready-for-school-4k-tb-1400x1050.jpg" class="img-top" alt="Card Front">
-  </div>
+    <div class="card" style="margin-left: 1000px; margin-top: -450px;">
+        <img style="width: 700px; height: 450px;"
+            src="https://images.hdqwalls.com/download/anime-warrior-girl-with-sword-5k-qk-1400x1050.jpg"
+            alt="Card Back">
+        <img style="width: 700px; height: 450px;"
+            src="https://images.hdqwalls.com/download/anime-school-girl-getting-ready-for-school-4k-tb-1400x1050.jpg"
+            class="img-top" alt="Card Front">
+    </div>
     <style>
-            .card {
-        width: 50px;
-        height: 50px;
-        position: relative;
-        display: inline-block;
-        margin: 50px;
-    }
-    .card .img-top {
-        display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 99;
-    }
-    .card:hover .img-top {
-        display: inline;
-    }
-    </style>s
+        .card {
+            width: 50px;
+            height: 50px;
+            position: relative;
+            display: inline-block;
+            margin: 50px;
+        }
 
-  </body>
+        .card .img-top {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 99;
+        }
 
-</html>
+        .card:hover .img-top {
+            display: inline;
+        }
+    </style>
+
+    </body>
+
+    </html>
+    <br>
+    <br><br><br><br>
+    <p>მნახველები</p>
+    <h1 id="count">0</h1>
+
+
+    <!-- SOCIAL PANEL HTML -->
+    <div class="social-panel-container">
+        <div class="social-panel">
+            <p>Created with <i class="fa fa-heart"></i> by
+                <button class="close-btn"><i class="fas fa-times"></i></button>
+            <ul>
+                <li>
+                    <a href="https://www.patreon.com/florinpop17" target="_blank">
+                        <i class="fab fa-discord"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/florinpop1705" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com/in/florinpop17" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://facebook.com/florinpop17" target="_blank">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://instagram.com/florinpop17" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <button class="floating-btn">
+        Get in Touch
+    </button>
+
+    <div class="floating-text">
+        ჩემი ფეისბუქი <a href="https://www.facebook.com/dimitri.mujirishvili.16/" target="_blank">www.facebook.com</a>
+    </div>
