--- a/dima1.html
+++ b/dima1.html
@@ -6,7 +6,7 @@
 
 <body style="background-color: #0e1538;">
     <h3 class="button" style="background-color: rgb(255, 255, 255); padding: 15px; text-align: right; width: 1865px; ">
-        <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px; border: solid black; margin-left: 7px;"
+        <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px; border: solid black; margin-left: 7px; border-radius: 30px;"
           href="index.html">უკან</a>
         <a style="background-color: lightblue; padding: 15px; text-align: right; width: 1865px;border: solid black; margin-left: 7px; "
           href="day2.html">ტუტორიალი</a>
@@ -64,6 +64,39 @@
         <br>
     
     <a href="4.mp4" target="_blank"></a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+    <video width="400" style="margin-left: 1500px; height: 230px; margin-top: -330px;" controls>
+
+      <source src="5.mp4" type="video/mp4">
+
+      <source src="mov_bbb.ogg" type="video/ogg">
+        </video>
+        <br>
+        <br>
+    
+    <a href="5.mp4" target="_blank"></a>
+
 
 
 </body>
