--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
     </body>
 
     </html>
-    <br>
+   <!-- <br>
     <br><br><br><br>
     <p>მნახველები</p>
     <h1 id="count">0</h1>
 
 
-    <!-- SOCIAL PANEL HTML -->
+     SOCIAL PANEL HTML
     <div class="social-panel-container">
         <div class="social-panel">
             <p>Created with <i class="fa fa-heart"></i> by
@@ -172,8 +172,8 @@
     </div>
     <button class="floating-btn">
         Get in Touch
-    </button>
+    </button>-->
 
-    <div class="floating-text">
-        ჩემი ფეისბუქი <a href="https://www.facebook.com/dimitri.mujirishvili.16/" target="_blank">www.facebook.com</a>
+    <div class="floating-text" style="color: rgb(255, 0, 0);">
+        ჩემი ფეისბუქი <a href="https://www.facebook.com/dimitri.mujirishvili.16/" target="_blank" style="color: yellow;">www.facebook.com</a>
     </div>
